Fixed some issues with inconsistent whitespace.

--- a/source/index.scss
+++ b/source/index.scss
@@ -1,8 +1,4 @@
-*
-{
-    margin: 0px;
-}
-
+@import "./styles/references/Defaults.scss";
 @import "./styles/references/Fonts.scss";
 @import "./styles/references/Colors.scss";
 @import "./styles/references/Animations.scss";
